Add jar.